--- a/backend/coolreads/src/main/resources/application.properties
+++ b/backend/coolreads/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=coolreads
-spring.profiles.active=prod
-
+spring.profiles.active=test
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/cool
